// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const x = { p: 1 };
const y = { q: 0 };
module.exports = { x, y };

=====================================output=====================================
// @flow

const x = { p: 1 };
const y = { q: 0 };
module.exports = { x, y };

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const a = require('./a');
module.exports = a;

=====================================output=====================================
// @flow

const a = require("./a");
module.exports = a;

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const { x } = require('./a');
module.exports = { x };

=====================================output=====================================
// @flow

const { x } = require("./a");
module.exports = { x };

================================================================================
`;

exports[`d.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const b = require('./b');
const c = require('./c');
(b.x: typeof c.x);

=====================================output=====================================
// @flow

const b = require("./b");
const c = require("./c");
(b.x: typeof c.x);

================================================================================
`;
